# umo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apis/python/: README.md  build.sh  setup.py  test.py  umo.pyx
include/api/: umo.h  umo.hpp  umo.hpp.orig  umo_api.h  umo_enums.h
include/model/: expression_id.hpp  model.hpp  operator.hpp  presolved_model.hpp  utils.hpp
include/model/operators/: compare.hpp  concepts.hpp  decision.hpp  linear.hpp  logical.hpp  misc.hpp  nary.hpp  unary.hpp  unary_float.hpp  unary_int.hpp
include/presolve/: cleanup.hpp  flatten.hpp  normalization_pass.hpp  presolve.hpp  propagate_constants.hpp  to_linear.hpp  to_sat.hpp
include/solver/: external_solvers.hpp  solver.hpp
src/api/: c_api.cpp  cpp_api.cpp  umo_api.cpp
src/model/: io.cpp  model.cpp  operator.cpp  presolved_model.cpp  writer_cnf.cpp  writer_lp.cpp  writer_nl.cpp  writer_umo.cpp
src/presolve/: cleanup.cpp  flatten.cpp  normalization_pass.cpp  presolve.cpp  propagate_constants.cpp  to_linear.cpp  to_sat.cpp
src/solver/: external_solvers.cpp  solver.cpp
test/: CMakeLists.txt  c_api.cpp  compute.cpp  cpp_api.cpp  linearization.cpp  linearize.cpp  operators.cpp  satify.cpp  small_models.cpp  solve_milp.cpp  solve_minlp.cpp  solve_sat.cpp
